Corrected color contrast to WCAG 2.0 AA (Accessibility Tweak) - Forms and Alerts
BS3 commits: 938d40fc20d2a843fd15f3af50a51427b53b36ce

--- a/less/variables.less
+++ b/less/variables.less
@@ -517,11 +517,11 @@
 // Form states and alerts
 // -------------------------
 
-@state-success-text:             #468847;
+@state-success-text:             #3c763d;
 @state-success-bg:               #dff0d8;
 @state-success-border:           darken(@state-success-bg, 20%);
 
-@state-info-text:                #3a87ad;
+@state-info-text:                #31708f;
 @state-info-bg:                  #d9edf7;
 @state-info-border:              darken(@state-info-bg, 20%);
 
@@ -529,7 +529,7 @@
 @state-warning-bg:               #f9edbe;
 @state-warning-border:           #f0c36d;
 
-@state-danger-text:              #b94a48;
+@state-danger-text:              #a94442;
 @state-danger-bg:                #f2dede;
 @state-danger-border:            darken(@state-danger-bg, 20%);
 
